# nxbak

./: .env.example  .gitignore  .nxbak.example.yml  .nxbak.yml  LICENSE  README.md  auth.dump.gz.enc  checksums.sha256  database.dump.gz.enc  manifest.json  pyproject.toml
.github/workflows/: nxbak-daily.yml  nxbak-manual.yml  nxbak-monthly.yml  test.yml
src/nxbak/: __init__.py  backup.py  checksum.py  cli.py  config.py  crypto.py  database.py  exceptions.py  git.py  manifest.py  restore.py  utils.py
tests/: test_backup.py  test_checksum.py  test_cli.py  test_config.py  test_database.py  test_git.py  test_manifest.py  test_restore.py  test_utils.py
